c4prj2_input/grade.txt
Grading at Wed Apr  3 07:13:05 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘read_input’:
input.c:48:29: error: ‘input’ undeclared (first use in this function)
   while(getline(&line, &sz, input)>0) {
                             ^
input.c:48:29: note: each undeclared identifier is reported only once for each function it appears in
Compilation of input.c failed

Overall Grade: F
